2003-01-18  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (html_select_set_text): make sure we have a longest
	string.

2003-01-17  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (style_set): get the new size when the style changes.

	* gtkhtml-properties.c: disable gconf for the font settings use
	the style values instead.

2003-01-16  Larry Ewing  <lewing@ximian.com>

	* htmltablecell.c (draw_background_helper): don't poke into the
	table for the background, tables draw their own background now.

	* htmltable.c (draw_background_helper): draw table backgrounds the
	way mozilla does.

	* gtkhtml.c (gtk_html_set_magnification): only try to change the
	clue if it exists.

2003-01-15  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (html_gdk_painter_new): initialize the style.
	(alloc_font): use the style as a fallback, use
	pango_font_description_from_string to get the font description.

	* gtkhtml.c (style_set): update the font when the style changes.

	* gtkhtml-properties.c (gtk_html_class_properties_new): use the
	style font description.

2003-01-15  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_draw_real): set Engine::expose
	(html_engine_add_expose): added expose parameter, use struct
	HTMLEngineExpose to store expose parameter as well

	* htmlembedded.c (draw): queue widget draw only when we aren't
	drawing on expose event request because it's already handled in
	gtk_container code and was causing infinite loops

	* gtkhtml.c (expose): use html_engine_expose

	* htmlengine.c (html_engine_expose): new function, used from
	expose event handler

2003-01-14  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (key_press_event): paste text only when event->length > 0

2003-01-13  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-table.c (html_engine_goto_table): pass arguments
	not prototypes.

2002-12-16  Larry Ewing  <lewing@ximian.com>

	* htmlshape.c: fix parsing of negative numbers.

	* htmlstyle.h: add prototypes. 
